# conffiles

./: .gitignore  README.md  TODO  configure.ac  install.sh.in
X/: Xdefaults
bash/: bash_aliases  bashrc
emacs/: README.md  emacs
feh/: fehbg  fehbg.in
i3/: alkal_wrapper.pl  config  i3status.conf
machine/kalray-lp155/emacs/: spacemacs
machine/kalray-lp155/i3/: config
machine/kalray-lp155/xorg/: xorg.conf
machine/pluto/: spacemacs
machine/themis/: gitconfig
polybar/: alkal.sh  config  launch.sh
